# relnotes

./: Cargo.toml  README.md  relnotes.toml
.github/: CODEOWNERS
src/: config.rs  data.rs  main.rs
src/config/: template.rs  timeframe.rs
