[package]
name = "relnotes"
version = "0.1.1"
authors = ["Erin Power <erin.power@embark-studios.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "0.3.1"
chrono = "0.4.19"
octocrab = "0.8"
env_logger = "0.8.1"
log = "0.4.11"
once_cell = "1.4.1"
regex = "1.4.1"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.59"
structopt = "0.3.20"
tera = "1.5.0"
tokio = { version = "0.2.22", features = ["macros", "fs"] }
toml = "0.5.7"
eyre = "0.3.5"
